--- a/index.html
+++ b/index.html
@@ -18,21 +18,32 @@
                 <li><a href="">Contemporary</a></li>
                 <li><a href="">Affordable</a></li>
             </ul>
-            <button type="button"><span></span></button>
+            <button type="button" onclick="toggleBtn()" id="btn"><span></span></button>
         </nav>
         <div class="lamp-container">
             <img src="images/lamp.png" class="lamp">
-            <img src="images/light.png" class="light">
+            <img src="images/light.png" class="light" id="light">
         </div>
 
         <div class="text-container">
             <h1>
-                Lastest in Lighting
+                Lastest <br>in Lighting
             </h1>
             <p>
                 This is the first lamp from our company. We're making a huge collection of modern Lamps in all categories from home use to office use
             </p>
+            <a href="">Check All collections</a>
+            <div class="control">
+                <p>
+                    04
+                </p>
+                <div class="line"><span></span></div>
+                <p>
+                    05
+                </p>
+            </div>
         </div>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
